# dt_avro_model

./: .gitignore  Makefile  README.md  commands.py  deviation_commands.py  gen_avro_schema.py  kafka_consumer.py  kafka_producer.py  kafka_producer_from_trace.py  kafka_reader.py  model.py  monitor_requests.py  process_request.py  producer_from_trace.py  pyproject.toml  request_task.py  state.py  task_producer.py  test.py  utils.py
.git-crypt/keys/default/0/: E434EDF76BCBCDB59389FF7C10705A3E9489DC7F.gpg
secret/: Process_anonyme.csv
