[tool.poetry]
name = "kafka-model"
version = "0.1.0"
description = ""
authors = ["odrling <florianbadie@odrling.xyz>"]

[tool.poetry.dependencies]
python = "^3.10"
aiokafka = ">=0.7.2"
dataclasses-avroschema = ">=0.26.1"
typer = "^0.4.0"
dateparser = "^1.1.1"
toolz = "^0.11.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
